--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <form>
-        <label>Enter Full Name</label>
+        <label>Enter  Name</label>
         <input type="text" id="name"required="true" />
         <br/>
         <br/>
